--- a/01-vite-vanilla/package.json
+++ b/01-vite-vanilla/package.json
@@ -9,6 +9,12 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "standard": "^17.1.0",
     "vite": "^4.3.9"
+  },
+  "eslintConfig": {
+    "extends": [
+      "./node_modules/standard/eslintrc.json"
+    ]
   }
 }
